jump added shadow fixed and camera rotation fixed

--- a/src/index.css
+++ b/src/index.css
@@ -21,13 +21,13 @@ html {
   background: #2c303a;
   opacity: 1; /* Visible by default */
   visibility: visible; /* Visible by default */
-  transition: opacity 2s ease-in-out, visibility 0s 2s;
+  transition: opacity 1.5s ease-in-out, visibility 0s 1.5s;
 }
 
 #waiting-screen.hidden {
   opacity: 0;
   visibility: hidden;
-  transition: opacity 2s ease-in-out, visibility 0s 0s; /* No delay for visibility change */
+  transition: opacity 1s ease-in-out, visibility 0s 1s; /* No delay for visibility change */
 }
 
 .container {
@@ -57,7 +57,14 @@ html {
   width: 0%; 
   transition: width 0.4s linear;
 }
-
+.progress-striped .progress-bar, #btn-explore{ 	
+  background-color: #FCBC51;
+  background-image: linear-gradient(
+        45deg, rgb(252,163,17) 25%, 
+        transparent 25%, transparent 50%, 
+        rgb(252,163,17) 50%, rgb(252,163,17) 75%,
+        transparent 75%, transparent); 
+}
 #btn-explore{
   display: none;
   position: relative;
@@ -68,12 +75,23 @@ html {
   box-shadow: 0px 6px 24px 0px rgba(0, 0, 0, 0.2);
   overflow: hidden;
   cursor: pointer;
+  content: "";
+  transition: all 0.4s ease-in-out;
 }
 
-#btn-explore {
+button:after {
   content: "";
-  background: #383f51;
-  transition: all 0.4s ease-in-out;
+  position: absolute;
+  right: 0;
+  width: 0%;
+  height: 100%;
+  background-color: #FCBC51;
+  background-image: linear-gradient(
+        45deg, transparent 25%, 
+        rgb(252,163,17) 25%, rgb(252,163,17) 50%, 
+        transparent 50%, transparent 75%,
+        rgb(252,163,17) 75%, transparent); 
+  transition: all 0.1s ease-in-out;
 }
 
 #btn-explore:hover::after {
@@ -126,14 +144,7 @@ html {
     transform: scale(1);
   }
 }
-.progress-striped .progress-bar, #btn-explore{ 	
-  background-color: #FCBC51;
-  background-image: linear-gradient(
-        45deg, rgb(252,163,17) 25%, 
-        transparent 25%, transparent 50%, 
-        rgb(252,163,17) 50%, rgb(252,163,17) 75%,
-        transparent 75%, transparent); 
-}
+
 .progress-striped .progress-bar {
   animation: progressAnimationStrike 2s linear infinite;
 }
